$Id: History,v 1.98 2001-01-25 15:28:05 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

25th January 2001  John Allison
- Added protection against empty G4Polyhedron objects.
   FukuiRenderer/src/G4FRSceneFunc.icc
   OPACS/src/G4GoSceneHandler.cc
   OpenGL/src/G4OpenGLSceneHandler.cc
   OpenInventor/src/G4OpenInventorSceneHandler.cc
   VRML/src/G4VRML1SceneHandlerFunc.icc
   VRML/src/G4VRML2SceneHandlerFunc.icc

25th January 2001  John Allison  (opengl-V03-00-00)
- Implemented running re-calculation of up-vector in the case of "object
  rotation" (lights move with camera) to prevent "flipping" of view when
  camera passes through up-vector.  Note that the default is "camera
  rotation" (lights do not move with camera, i.e., remain fixed relative
  to object) so the default is that this "flipping" can happen.  To set
  "object rotation" (lights move with camera) use
  /vis/lights/move_with_camera true (soon to be