@@ -1,4 +1,4 @@
-$Id: History,v 1.98 2001-01-25 15:28:05 johna Exp $
+$Id: History,v 1.99 2001-02-01 17:36:19 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,14 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+1st February 2001  John Allison  (vis-V03-00-01)
+- Fixed cause of crash when setting viewpoint before creating scene (Bug #157).
+  Solution: SetView no longer called when view parameters are changed.  In
+  any case it's called just before drawing, whixh is the right place.
+- Fixed /vis/set/sides problem (Satoshi Tanaka) (Bug #204).
+  Solution: Update view's view parameters in /vis/set/sides - had somehow
+  been overlooked.
 
 25th January 2001  John Allison
 - Added protection against empty G4Polyhedron objects.
